--- a/eden.html
+++ b/eden.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body style="margin:0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js"></script>
+  <script src="lib/threejs/three.js"></script>
+  <script src="lib/threejs/trackballcontrols.js"></script>
+  <script src="lib/threejs/firstpersoncontrols.js"></script>
+  <script src="lib/threejs/flycontrols.js"></script>
   <script src="lib/csg/csg.js"></script>
   <script src="eden.js"></script>
 </body>
