Started basic modeling.

--- a/web/eden.html
+++ b/web/eden.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <style>
+    .codeContainer {
+      position: absolute;
+      width: 384px; right: 0;
+      top: 0; bottom: 0;
+    }
+
+    .codeContainer > .feedback {
+      position: absolute;
+      width: 384px; height: 256px;
+      left: 0; top: 256px;
+      font-family: "Fira Code", courier, monospace;
+    }
+
+    .codeContainer > .input {
+      position: absolute;
+      width: 384px; height: 256px;
+      left: 0; top: 0;
+      font-family: "Fira Code", courier, monospace;
+    }
+  </style>
+</head>
+
 <body style="margin:0; overflow: hidden;">
 
   <script id="worldVS" type="notjs">
